// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserListItem.vue should open confirmation modal when click on Delete button then call handleDeleteUser method when click on Delete button in modal 1`] = `
<tr>
  <td>Test 1</td>
  <td>test1@example.com</td>
  <td>123456</td>
  <td>Hungary</td>
  <td>mobile, internet</td>
  <td class="text-right">
    <button id="details" class="btn btn-info btn-sm">Details</button>
    <a class="btn btn-success btn-sm">Edit</a>
    <button id="delete-modal" class="btn btn-danger btn-sm">Delete</button>
  </td>
  <div class="modal modal-mask" style="display: block;" name="fade">
    <div role="document" class="modal-dialog">
      <div class="modal-content">
        <div class="modal-header">
          <h5 class="modal-title">
            Delete user
          </h5>
        </div>
        <div class="modal-body">
          <p>
            Are you sure you want to delete
            <b>Test 1</b>'s profile?
          </p>
        </div>
        <div class="modal-footer">
          <div>
            <button type="button" id="delete" class="btn btn-danger">
              Delete
            </button>
            <button type="button" data-dismiss="modal" class="btn btn-secondary">
              Cancel
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
</tr>
`;

exports[`UserListItem.vue should open modal when click on Details button 1`] = `
<tr>
  <td>Test 1</td>
  <td>test1@example.com</td>
  <td>123456</td>
  <td>Hungary</td>
  <td>mobile, internet</td>
  <td class="text-right">
    <button id="details" class="btn btn-info btn-sm">Details</button>
    <a class="btn btn-success btn-sm">Edit</a>
    <button id="delete-modal" class="btn btn-danger btn-sm">Delete</button>
  </td>
  <!---->
  <div class="modal modal-mask" style="display: block;" name="fade">
    <div role="document" class="modal-dialog">
      <div class="modal-content">
        <div class="modal-header">
          <h5 class="modal-title">
            <b>Test 1</b>
          </h5>
        </div>
        <div class="modal-body">
          <p>
            <ul class="list-unstyled">
              <li>Name: Test 1</li>
              <li>Email: test1@example.com</li>
              <li>Phone: 123456</li>
              <li>Country: Hungary</li>
              <li>Services: mobile, internet</li>
              <li>Newsletter: true</li>
            </ul>
          </p>
        </div>
        <div class="modal-footer">
          <div>
            <button type="button" data-dismiss="modal" class="btn btn-secondary">
              Cancel
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</tr>
`;

exports[`UserListItem.vue should render UserListItem correctly 1`] = `
<tr>
  <td>Test 1</td>
  <td>test1@example.com</td>
  <td>123456</td>
  <td>Hungary</td>
  <td>mobile, internet</td>
  <td class="text-right">
    <button id="details" class="btn btn-info btn-sm">Details</button>
    <a class="btn btn-success btn-sm">Edit</a>
    <button id="delete-modal" class="btn btn-danger btn-sm">Delete</button>
  </td>
  <!---->
  <!---->
</tr>
`;
